--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
+    "@crinkles/feo": "^2.2.4",
+    "@crinkles/fsm": "^0.6.0",
     "@sveltejs/adapter-vercel": "next",
     "@sveltejs/kit": "next",
+    "@sveltejs/pancake": "^0.0.18",
+    "cookie": "^0.4.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
@@ -21,8 +25,5 @@
     "svelte": "^3.42.6"
   },
   "dependencies": {
-    "@crinkles/feo": "^2.2.4",
-    "@sveltejs/pancake": "^0.0.18",
-    "cookie": "^0.4.1"
   }
 }
