--- a/package.json
+++ b/package.json
@@ -3,26 +3,33 @@
   "type": "module",
   "version": "0.1.0",
   "scripts": {
+    "test": "jest",
     "dev": "svelte-kit dev",
     "build": "svelte-kit build --verbose",
     "preview": "svelte-kit preview",
+    "test:watch": "npm test -- --watchAll --coverage",
     "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
     "@crinkles/feo": "^2.2.4",
-    "@crinkles/fsm": "^0.10.0",
+    "@crinkles/fsm": "^0.11.0",
+    "@crinkles/pubbel": "^2.1.0",
     "@sveltejs/adapter-vercel": "next",
     "@sveltejs/kit": "next",
     "@sveltejs/pancake": "^0.0.18",
+    "babel-jest": "^27.4.4",
     "cookie": "^0.4.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
+    "jest": "^27.4.4",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
     "sass": "^1.43.4",
-    "svelte": "^3.42.6"
+    "svelte": "^3.42.6",
+    "ts-jest": "^27.1.1",
+    "typescript": "^4.5.3"
   },
   "dependencies": {}
 }
